option('headers_only', type : 'boolean', value : false)
option('mlibc_no_headers', type : 'boolean', value : false)
option('build_tests', type: 'boolean', value : false)
option('build_tests_host_libc', type: 'boolean', value : true)
option('disable_ansi_option', type: 'boolean', value : false)
option('disable_crypt_option', type: 'boolean', value : false)
option('disable_posix_option', type: 'boolean', value : false)
option('disable_linux_option', type: 'boolean', value : false)
option('disable_linux_headers_option', type: 'boolean', value : false)
option('disable_iconv_option', type: 'boolean', value : false)
option('disable_intl_option', type: 'boolean', value : false)
option('disable_glibc_option', type: 'boolean', value : false)
option('disable_bsd_option', type: 'boolean', value : false)
option('debug_allocator', type : 'boolean', value : false,
	description : 'Enable the debug allocator, which uses mmap for every allocation and adds guard pages for each allocation')
