option('headers_only', type : 'boolean', value : false)
option('no_headers', type : 'boolean', value : false)
option('build_tests', type: 'boolean', value : false)
option('build_tests_host_libc', type: 'boolean', value : true)
option('posix_option', type: 'feature', value : 'auto')
option('linux_option', type: 'feature', value : 'auto')
option('glibc_option', type: 'feature', value : 'auto')
option('bsd_option', type: 'feature', value : 'auto')
option('libgcc_dependency', type : 'boolean', value : true)
option('linux_kernel_headers', type: 'string', value : '')
option('default_library_paths', type: 'array', value: [])
option('debug_allocator', type : 'boolean', value : false,
	description : 'Enable the debug allocator, which uses mmap for every allocation and adds guard pages for each allocation')
option('use_freestnd_hdrs', type : 'feature', value : 'auto',
	description : 'Use freestnd-c{,xx}-hdrs instead of looking for compiler headers')
